# automix

./: .editorconfig  .gitignore  API_CONTRACT.md  CLAUDE.md  Makefile  README.md  SETUP.md  app.py  build-windows.bat  garrix-tracks.txt  ground_truth.json  package-lock.json  package.json
.github/workflows/: pages.yml  release.yml
backend/: analysis.py  db.py  main.py  models_setup.py  ordering.py  paths.py  pyproject.toml  render.py  schemas.py  short_captions.py  verify.py  youtube.py
backend/tests/: golden_truth.json  test_detection.py  test_tracklist.py  test_youtube.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  changelog.ts  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AutomixPanel.tsx  DesktopContextMenu.tsx  KeyChip.tsx  MixEditor.tsx  MixesPanel.tsx  ModelDownloadDialog.tsx  Player.tsx  ProjectManager.tsx  ProjectsScreen.tsx  RenderDialog.tsx  SettingsDialog.tsx  ShortPreview.tsx  Timeline.tsx  Tour.tsx  TrackList.tsx  VideoPreview.tsx
frontend/src/hooks/: useLivePreview.ts  useProgressSocket.ts
frontend/src/lib/: accent.ts  audioFocus.ts  backend.ts  camelot.ts  downloadQuality.ts  fonts.ts  format.ts  theme.ts
packaging/: automix.iss  automix.spec  build-local.ps1  fetch_tools.py  icon.icns  make_splash.py
scripts/: check-system.mjs  check-system.sh  deploy-pages.sh  deploy-site.sh  install-backend.mjs  render_full.py  render_preview.py  setup.mjs  setup.ps1  setup.sh  venv.mjs
site/: index.html
(+5 files in other folders)
