[project]
name = "automix-backend"
version = "0.1.0"
description = "Local-only EDM auto-mixer backend"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "numpy>=1.26,<2.0",
    "scipy>=1.11",
    "soundfile>=0.12",
    "librosa>=0.10",
    "ffmpeg-python>=0.2",
    "pyrubberband>=0.4",
    "allin1>=1.1",
    "demucs>=4.0",
    "torch>=2.1",
    "torchaudio>=2.1",
    "websockets>=12.0",
    "aiofiles>=23.2",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
